--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "config": "^1.30.0",
     "express": "^4.16.2",
+    "lodash": "^4.17.5",
     "mocha": "^5.0.1",
     "needle": "^2.2.0"
   }
