--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "best nodejs practice",
   "main": "server.js",
   "scripts": {
-    "test": "npm test"
+    "test": "mocha"
   },
   "author": "Miranda",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.2",
+    "chai": "^4.1.2",
     "config": "^1.30.0",
     "express": "^4.16.2",
     "lodash": "^4.17.5",
