--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.18.2",
     "chai": "^4.1.2",
     "config": "^1.30.0",
+    "cors": "^2.8.4",
     "express": "^4.16.2",
     "lodash": "^4.17.5",
     "mocha": "^5.0.1",
